Update month selector and add download button

--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
 </head>
 
 <body>
-  <form id="month-selector">
-    <label><input type="checkbox" value="0" checked> January</label>
-    <label><input type="checkbox" value="1" checked> February</label>
-    <label><input type="checkbox" value="2" checked> March</label>
-    <label><input type="checkbox" value="3" checked> April</label>
-    <label><input type="checkbox" value="4" checked> May</label>
-    <label><input type="checkbox" value="5" checked> June</label>
-    <label><input type="checkbox" value="6" checked> July</label>
-    <label><input type="checkbox" value="7" checked> August</label>
-    <label><input type="checkbox" value="8" checked> September</label>
-    <label><input type="checkbox" value="9" checked> October</label>
-    <label><input type="checkbox" value="10" checked> November</label>
-    <label><input type="checkbox" value="11" checked> December</label>
-  </form>
+  <div class="header">
+    <form id="month-selector">
+      <label><input type="checkbox" value="0"> Janvier</label>
+      <label><input type="checkbox" value="1"> Février</label>
+      <label><input type="checkbox" value="2"> Mars</label>
+      <label><input type="checkbox" value="3"> Avril</label>
+      <label><input type="checkbox" value="4"> Mai</label>
+      <label><input type="checkbox" value="5"> Juin</label>
+      <label><input type="checkbox" value="6"> Juillet</label>
+      <label><input type="checkbox" value="7"> Août</label>
+      <label><input type="checkbox" value="8"> Septembre</label>
+      <label><input type="checkbox" value="9"> Octobre</label>
+      <label><input type="checkbox" value="10"> Novembre</label>
+      <label><input type="checkbox" value="11"> Décembre</label>
+    </form>
+    <button id="download-view" onclick="downloadSelectedView()">Télécharger les mois sélectionnés</button>
+  </div>
 
   <div id="calendar"></div>
   <script src="main.js" type="module"></script>
