Update month selector checkboxes to be checked by default

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 <body>
   <div class="header">
     <form id="month-selector">
-      <label><input type="checkbox" value="0"> Janvier</label>
-      <label><input type="checkbox" value="1"> Février</label>
-      <label><input type="checkbox" value="2"> Mars</label>
-      <label><input type="checkbox" value="3"> Avril</label>
-      <label><input type="checkbox" value="4"> Mai</label>
-      <label><input type="checkbox" value="5"> Juin</label>
-      <label><input type="checkbox" value="6"> Juillet</label>
-      <label><input type="checkbox" value="7"> Août</label>
-      <label><input type="checkbox" value="8"> Septembre</label>
-      <label><input type="checkbox" value="9"> Octobre</label>
-      <label><input type="checkbox" value="10"> Novembre</label>
-      <label><input type="checkbox" value="11"> Décembre</label>
+      <label><input type="checkbox" value="0" checked> Janvier</label>
+      <label><input type="checkbox" value="1" checked> Février</label>
+      <label><input type="checkbox" value="2" checked> Mars</label>
+      <label><input type="checkbox" value="3" checked> Avril</label>
+      <label><input type="checkbox" value="4" checked> Mai</label>
+      <label><input type="checkbox" value="5" checked> Juin</label>
+      <label><input type="checkbox" value="6" checked> Juillet</label>
+      <label><input type="checkbox" value="7" checked> Août</label>
+      <label><input type="checkbox" value="8" checked> Septembre</label>
+      <label><input type="checkbox" value="9" checked> Octobre</label>
+      <label><input type="checkbox" value="10" checked> Novembre</label>
+      <label><input type="checkbox" value="11" checked> Décembre</label>
     </form>
     <button id="download-view" onclick="downloadSelectedView()">Télécharger les mois sélectionnés</button>
   </div>
