Update download button and create Excel file

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <label><input type="checkbox" value="10" checked> Novembre</label>
       <label><input type="checkbox" value="11" checked> Décembre</label>
     </form>
-    <button id="download-view" onclick="downloadSelectedView()">Télécharger les mois sélectionnés</button>
+    <button id="download-view" onclick="downloadCsvFile()">Télécharger les mois sélectionnés</button>
   </div>
 
   <div id="calendar"></div>
