Refactor UI styles and button placement

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
       Aucun médecin n'a encore été ajouté.
     </p>
 
-    <button id="download-planning">⚙️ Générer le planning</button>
+    <div class="button-container">
+      <button id="download-planning">⚙️ Générer le planning</button>
+    </div>
   </div>
   <script src="main.js" type="module"></script>
 </body>
