Update page title and add favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Planning</title>
+  <title>Planning app</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -48,6 +49,8 @@
       <button id="download-planning">⚙️ Générer le planning</button>
     </div>
   </div>
+
+  <p class="legal-information">© 2024 Valentin Genest. Tous droits réservés.</p>
   <script src="main.js" type="module"></script>
 </body>
 
