--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       id="doctors-list-input">
     <input type="button" value="Ajouter" id="add-doctor">
 
-    <h3>List actuelle:</h3>
+    <h3>Liste actuelle:</h3>
     <p id="current-doctors-list">
       Aucun médecin n'a encore été ajouté.
     </p>
