Update "Ajouter" button label to "Sauvegarder la liste"

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <input type="text" size="50" placeholder="Dr. Dupont, Jean-Jacques Martin, Dr. Amélie Durand, ..."
       id="doctors-list-input">
-    <input type="button" value="Ajouter" id="add-doctor">
+    <input type="button" value="Sauvegarder la liste" id="add-doctor">
 
     <h3>Liste actuelle:</h3>
     <p id="current-doctors-list">
